--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@ and open the template in the editor.
         <title>Agrithon Countdown</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- Bootstrap -->
+        <link href="css/bootstrap.min.css" rel="stylesheet">
         <style>
             body{
                 text-align: center;
@@ -45,6 +47,10 @@ and open the template in the editor.
                 border-radius: 3px;
                 background: #00816A;
                 display: inline-block;
+            }
+
+            #time-setting {
+                margin-top: 10px;
             }
 
             .smalltext{
@@ -117,33 +123,61 @@ and open the template in the editor.
         </style>
     </head>
     <body>
-        <div>
-            <h1>Agri-Countdown</h1>
-            <div id="clockdiv">
-                <div>
-                    <span class="minutes"></span>
-                    <div class="smalltext">Minutes</div>
-                </div>
-                <div>
-                    <span class="seconds"></span>
-                    <div class="smalltext">Seconds</div>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-12">
+                    <h1>Agri-Countdown</h1>
+                    <div id="clockdiv">
+                        <div>
+                            <span class="minutes">00</span>
+                            <div class="smalltext">Minutes</div>
+                        </div>
+                        <div>
+                            <span class="seconds">00</span>
+                            <div class="smalltext">Seconds</div>
+                        </div>
+                    </div>
+                    <div>
+                        <button id="stop" class="agri-btn">Stop</button>
+                    </div>
                 </div>
             </div>
-            <div>
-                <button id="stop" class="agri-btn">Stop</button>
-            </div>
-            <div>
-                <h3>Total:</h3>
-                <input type="text" id="set-min" class="agri-input" placeholder="min." size="5">
-                <input type="text" id="set-sec" class="agri-input" placeholder="sec." size="5">
-                Remind:
-                <input type="text" id="remind-min" class="agri-input" placeholder="min." size="5">
-                <input type="text" id="remind-sec" class="agri-input" placeholder="sec." size="5">
-                <button id="agriGo" class="agri-btn">Go!</button>
+            <div id="time-setting">
+                <div class="row" >
+                    <div class="col-md-6 col-md-offset-3">
+                        <div class="row">
+                            <div class="col-md-5 text-right">
+                                <p class="lead">Total</p>
+                            </div>
+                            <div class="col-md-7 text-left">
+                                <input type="text" id="set-min" class="agri-input" placeholder="min." size="5">
+                                <input type="text" id="set-sec" class="agri-input" placeholder="sec." size="5">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-5 text-right">
+                                <p class="lead">Remind</p>
+                            </div>
+                            <div class="col-md-7 text-left">
+                                <p>
+                                    <input type="text" id="remind-min" class="agri-input" placeholder="min." size="5">
+                                    <input type="text" id="remind-sec" class="agri-input" placeholder="sec." size="5">
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4 col-md-offset-4">
+                        <button id="agriGo" class="agri-btn">Go!</button>
+                    </div>
+                </div>
             </div>
         </div>
         <script type="text/javascript" src="js/jquery-3.1.0.min.js"></script>
         <script type="text/javascript" src="js/howler.min.js"></script>
+        <!-- Include all compiled plugins (below), or include individual files as needed -->
+        <script src="js/bootstrap.min.js"></script>
         <script type="text/javascript">
             function getTimeRemaining(endtime) {
                 var t = Date.parse(endtime) - Date.parse(new Date());
@@ -181,8 +215,6 @@ and open the template in the editor.
                     if (t.total === remindTime) {
                         soundRemind.play();
                     }
-
-                    console.log(t.total, remindTime);
                 }
 
                 updateClock();
@@ -215,10 +247,13 @@ and open the template in the editor.
                 var deadline = new Date(Date.parse(new Date()) + t_timeDiff);
 
                 initializeClock('clockdiv', remindTime, deadline);
+
+                $('#time-setting').slideUp();
             });
 
             $('#stop').click(function () {
                 soundEnd.stop();
+                $('#time-setting').slideDown();
             });
         </script>
     </body>
